--- a/style.css
+++ b/style.css
@@ -9,11 +9,11 @@ body{
 }
 
 .card{
-    width: 90%;
+    width: 100%;
     max-width: 470px;
     background: linear-gradient(135deg, #00feba, #5b548a);
     color: #fff;
-    margin: 100px auto 0;
+    margin: 100px auto 0 ;
     border-radius: 20px;
     padding: 40px 35px;
     text-align: center;
@@ -24,6 +24,7 @@ body{
     display: flex;
     align-items: center;
     justify-content: space-between;
+
 }
 
 .search input{
@@ -47,6 +48,7 @@ body{
     width: 60px;
     height: 60px;
     cursor: pointer;
+    padding: 12px;
 }
 .search button img{
     width: 16px;
